fixed z-index issues

--- a/portfolio-website/src/app/navbar/navbar.component.scss
+++ b/portfolio-website/src/app/navbar/navbar.component.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .navbar {
@@ -13,7 +14,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 99;
 }
 
 .nav-link{
