--- a/portfolio-website/src/app/splash/splash.component.scss
+++ b/portfolio-website/src/app/splash/splash.component.scss
@@ -46,6 +46,7 @@
   text-align: center;
   -webkit-animation: fade-and-hover 2s infinite;
   -webkit-animation-delay: 4s;
+  z-index: 0;
 }
 
 .featured-container{
