--- a/portfolio-website/src/styles.scss
+++ b/portfolio-website/src/styles.scss
@@ -7,7 +7,7 @@ body, html{
 }
 
 .display-none{
-  display: block;
+  display: none;
 }
 
 .display-block{
